--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   .header {
     padding: 80px;
     text-align: center;
-    background: #1abc9c;
+    background: #f5ab51;
     color: white;
   }
 
@@ -125,8 +125,8 @@
 <body>
 
   <div class="header">
-    <h1>My Website</h1>
-    <p>A <b>responsive</b> website created by me.</p>
+    <h1>Kromer</h1>
+    <p>A <b>[[Big Shot]]</b> website</p>
   </div>
 
   <div class="navbar">
@@ -139,7 +139,7 @@
   <div class="row">
     <div class="side">
       <h2>About Me</h2>
-      <h5>Photo of me:</h5>
+      <h5>Photo of Pipis:</h5>
       <div class="fakeimg" style="height:200px;">Image</div>
       <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
       <h3>More Text</h3>
