--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
     <div class="side">
       <h2>About Me</h2>
       <h5>Photo of Pipis:</h5>
-      <div <img src="Pipis.png"> </div>
+      <div <img src="https://static.wikia.nocookie.net/deltarune/images/9/93/Pipis_battle_static.png/revision/latest/scale-to-width-down/32?cb=20210925180715"> </div>
       <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
       <h3>More Text</h3>
       <p>Lorem ipsum dolor sit ame.</p>
