--- a/index.html
+++ b/index.html
@@ -140,11 +140,11 @@
     <div class="side">
       <h2>About Me</h2>
       <h5>Photo of Pipis:</h5>
-      <div <img src="https://static.wikia.nocookie.net/deltarune/images/9/93/Pipis_battle_static.png/revision/latest/scale-to-width-down/32?cb=20210925180715"> </div>
+      <img src="https://static.wikia.nocookie.net/deltarune/images/9/93/Pipis_battle_static.png/revision/latest/scale-to-width-down/32?cb=20210925180715"> 
       <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
       <h3>More Text</h3>
       <p>Lorem ipsum dolor sit ame.</p>
-      <div class="fakeimg" style="height:60px;">Image</div><br>
+      <img src="https://static.wikia.nocookie.net/villains/images/d/d9/Spamton_battle_static.png/revision/latest?cb=20211029231523"><br>
       <div class="fakeimg" style="height:60px;">Image</div><br>
       <div class="fakeimg" style="height:60px;">Image</div>
     </div>
